force-app/main/default/objects/Ham_Service_Indicators__mdt/Ham_Service_Indicators__mdt.object-meta.xml
<CustomObject>
    <description>To fetch the alumni data based on service indicators configured.</description>
    <label>Ham Service Indicators</label>
    <pluralLabel>Ham Service Indicators</pluralLabel>
</CustomObject>