force-app/main/default/objects/Ham_Service_Indicators__mdt/fields/Filter_Placeholder__c.field-meta.xml
<CustomField>
    <fullName>Filter_Placeholder__c</fullName>
    <description>placeholder value of the filters</description>
    <inlineHelpText>placeholder value of the filters</inlineHelpText>
    <label>Filter Placeholder</label>
    <length>80</length>
    <type>Text</type>
</CustomField>