force-app/main/default/objects/Ham_Service_Indicators__mdt/fields/Indicator_For_Field__c.field-meta.xml
<CustomField>
    <fullName>Indicator_For_Field__c</fullName>
    <description>The field to which this indicator applies to</description>
    <inlineHelpText>The field to which this indicator applies to</inlineHelpText>
    <label>Indicator For Field</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>