force-app/main/default/objects/Ham_Service_Indicators__mdt/fields/Indicator_Value__c.field-meta.xml
<CustomField>
    <fullName>Indicator_Value__c</fullName>
    <description>Name of the &apos;Service Indicator Value&apos; object.</description>
    <inlineHelpText>Name of the &apos;Service Indicator Value&apos; object.</inlineHelpText>
    <label>Indicator Value</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>