force-app/main/default/objects/Ham_Service_Indicators__mdt/fields/Module__c.field-meta.xml
<CustomField>
    <fullName>Module__c</fullName>
    <description>Where does this indicator apply? For example: Directory / Privacy</description>
    <inlineHelpText>Where does this indicator apply? For example: Directory / Privacy</inlineHelpText>
    <label>Module</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>